Working on new pages

--- a/pages/branding.html
+++ b/pages/branding.html
@@ -123,6 +123,30 @@
             </div>
         </section>
 
+        <!-- Flowchart -->
+        <section id="flowchart" class="home-section" style="background-color: #00001a">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-md-4">
+                        <ul class="flowchart">
+                            <li class="wow fadeInDown" data-wow-delay="1.0s">
+                                <a href="#"><img src="/img/flowchart/1.png" alt="" class="img-responsive"></a>
+                                <h3>Quadro 1</h3>
+                            </li>
+                            <li class="wow fadeInDown" data-wow-delay="1.0s">
+                                <a href="#"><img src="/img/flowchart/2.png" alt="" class="img-responsive"></a>
+                                <h3>Quadro 1</h3>
+                            </li>
+                            <li class="wow fadeInDown" data-wow-delay="1.0s">
+                                <a href="#"><img src="/img/flowchart/3.png" alt="" class="img-responsive"></a>
+                                <h3>Quadro 1</h3>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Contact -->
         <section id="contact" class="home-section bg-gray">
             <div class="container">
