Working on new pages

--- a/pages/branding.html
+++ b/pages/branding.html
@@ -124,22 +124,22 @@
         </section>
 
         <!-- Flowchart -->
-        <section id="flowchart" class="home-section" style="background-color: #00001a">
+        <section id="flowchart" class="technologies" style="background-color: #00001a">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 col-md-4">
-                        <ul class="flowchart">
+                    <div class="col-xs-12 col-sm-4">
+                        <ul class="technologies">
                             <li class="wow fadeInDown" data-wow-delay="1.0s">
                                 <a href="#"><img src="/img/flowchart/1.png" alt="" class="img-responsive"></a>
-                                <h3>Quadro 1</h3>
+                                <h3>A IDEIA</h3>
                             </li>
                             <li class="wow fadeInDown" data-wow-delay="1.0s">
                                 <a href="#"><img src="/img/flowchart/2.png" alt="" class="img-responsive"></a>
-                                <h3>Quadro 1</h3>
+                                <h3>O ESBOÇO</h3>
                             </li>
                             <li class="wow fadeInDown" data-wow-delay="1.0s">
                                 <a href="#"><img src="/img/flowchart/3.png" alt="" class="img-responsive"></a>
-                                <h3>Quadro 1</h3>
+                                <h3>A MARCA</h3>
                             </li>
                         </ul>
                     </div>
