--- a/pages/branding.html
+++ b/pages/branding.html
@@ -124,7 +124,7 @@
         </section>
 
         <!-- Flowchart -->
-        <section id="flowchart" class="technologies" style="background-color: #00001a">
+        <section id="flowchart" class="home-section parallax" style="background-color: #00001a">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-4">
