Working on new pages

--- a/pages/branding.html
+++ b/pages/branding.html
@@ -95,7 +95,7 @@
     </section>
 
     <!-- About -->
-    <section id="branding" class="home-section" style="background-color: #00001a">
+    <section id="branding" class="home-section" style="background-color: #00001a;">
         <div class="container">
             <div class="row">
                 <div class="col-md-offset-2 col-md-8">
@@ -109,7 +109,7 @@
         </div>
 
         <!-- Services -->
-        <section id="services" class="home-section" style="background-color: #00001a">
+        <section id="services" class="home-section" style="background-color: #00001a;">
             <div class="container">
                 <div class="row">
                     <div class="col-md-offset-2 col-md-8">
@@ -124,27 +124,26 @@
         </section>
 
         <!-- Flowchart -->
-        <section id="flowchart" class="home-section parallax" style="background-color: #00001a">
+        <!-- Parallax 2 -->
+        <section id="parallax2" class="home-section parallax" style="background-color: #00001a;" data-stellar-background-ratio="0.5">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-sm-4">
-                        <ul class="technologies">
-                            <li class="wow fadeInDown" data-wow-delay="1.0s">
-                                <a href="#"><img src="/img/flowchart/1.png" alt="" class="img-responsive"></a>
-                                <h3>A IDEIA</h3>
-                            </li>
-                            <li class="wow fadeInDown" data-wow-delay="1.0s">
-                                <a href="#"><img src="/img/flowchart/2.png" alt="" class="img-responsive"></a>
-                                <h3>O ESBOÇO</h3>
-                            </li>
-                            <li class="wow fadeInDown" data-wow-delay="1.0s">
-                                <a href="#"><img src="/img/flowchart/3.png" alt="" class="img-responsive"></a>
-                                <h3>A MARCA</h3>
-                            </li>
-                        </ul>
+                    <div class="section-heading">
+                        <div class="heading-line"></div>
+                        <div class="col-xs-4">
+                            <ul class="technologies">
+                                <li class="wow fadeInDown" data-wow-delay="1.0s">
+                                    <a href="#"><img src="/img/flowchart/1.png" alt="" class="img-responsive"></a>
+                                </li>'
+                                <li class="wow fadeInDown" data-wow-delay="2.0s">
+                                    <a href="#"><img src="/img/flowchart/2.png" alt="" class="img-responsive"></a>
+                                </li>
+                                <li class="wow fadeInDown" data-wow-delay="3.0s">
+                                    <a href="#"><img src="/img/flowchart/3.png" alt="" class="img-responsive"></a>
+                                </li>
+                        </div>
                     </div>
                 </div>
-            </div>
         </section>
 
         <!-- Contact -->
