--- a/pages/branding.html
+++ b/pages/branding.html
@@ -134,7 +134,7 @@
                             <ul class="technologies">
                                 <li class="wow fadeInDown" data-wow-delay="1.0s">
                                     <a href="#"><img src="/img/flowchart/1.png" alt="" class="img-responsive"></a>
-                                </li>'
+                                </li>
                                 <li class="wow fadeInDown" data-wow-delay="2.0s">
                                     <a href="#"><img src="/img/flowchart/2.png" alt="" class="img-responsive"></a>
                                 </li>
@@ -144,6 +144,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
 
         <!-- Contact -->
