Working on new pages

--- a/pages/branding.html
+++ b/pages/branding.html
@@ -134,12 +134,23 @@
                             <ul class="technologies">
                                 <li class="wow fadeInDown" data-wow-delay="1.0s">
                                     <a href="#"><img src="/img/flowchart/1.png" alt="" class="img-responsive"></a>
+                                    <h4>A IDEIA</h4>
                                 </li>
-                                <li class="wow fadeInDown" data-wow-delay="2.0s">
-                                    <a href="#"><img src="/img/flowchart/2.png" alt="" class="img-responsive"></a>
+                            </ul>
+                        </div>
+                        <div class="col-xs-4">
+                            <ul class="technologies">
+                                <li class="wow fadeInDown" data-wow-delay="1.0s">
+                                    <a href="#"><img src="/img/flowchart/1.png" alt="" class="img-responsive"></a>
+                                    <h4>O ESBOÇO</h4>
                                 </li>
-                                <li class="wow fadeInDown" data-wow-delay="3.0s">
-                                    <a href="#"><img src="/img/flowchart/3.png" alt="" class="img-responsive"></a>
+                            </ul>
+                        </div>
+                        <div class="col-xs-4">
+                            <ul class="technologies">
+                                <li class="wow fadeInDown" data-wow-delay="1.0s">
+                                    <a href="#"><img src="/img/flowchart/1.png" alt="" class="img-responsive"></a>
+                                    <h4>A MARCA</h4>
                                 </li>
                             </ul>
                         </div>
