Working on new pages

--- a/pages/branding.html
+++ b/pages/branding.html
@@ -124,32 +124,31 @@
         </section>
 
         <!-- Flowchart -->
-        <!-- Parallax 2 -->
-        <section id="parallax2" class="home-section parallax" style="background-color: #00001a;" data-stellar-background-ratio="0.5">
+        <section id="flowchart" class="home-section parallax" style="background-color: #00001a;" data-stellar-background-ratio="0.5">
             <div class="container">
                 <div class="row">
                     <div class="section-heading">
                         <div class="heading-line"></div>
-                        <div class="col-xs-4">
-                            <ul class="technologies">
+                        <div class="col-xs-12 col-sm-4">
+                            <ul class="flowchart">
                                 <li class="wow fadeInDown" data-wow-delay="1.0s">
                                     <a href="#"><img src="/img/flowchart/1.png" alt="" class="img-responsive"></a>
                                     <h4>A IDEIA</h4>
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-xs-4">
-                            <ul class="technologies">
+                        <div class="col-xs-12 col-sm-4">
+                            <ul class="flowchart">
                                 <li class="wow fadeInDown" data-wow-delay="1.0s">
-                                    <a href="#"><img src="/img/flowchart/1.png" alt="" class="img-responsive"></a>
+                                    <a href="#"><img src="/img/flowchart/2.png" alt="" class="img-responsive"></a>
                                     <h4>O ESBOÇO</h4>
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-xs-4">
-                            <ul class="technologies">
+                        <div class="col-xs-12 col-sm-4">
+                            <ul class="flowchart">
                                 <li class="wow fadeInDown" data-wow-delay="1.0s">
-                                    <a href="#"><img src="/img/flowchart/1.png" alt="" class="img-responsive"></a>
+                                    <a href="#"><img src="/img/flowchart/3.png" alt="" class="img-responsive"></a>
                                     <h4>A MARCA</h4>
                                 </li>
                             </ul>
