Working on new pages

--- a/pages/branding.html
+++ b/pages/branding.html
@@ -72,22 +72,13 @@
                 <div class="carousel-inner" role="listbox">
                     <!-- Slide 1 -->
                     <div class="item active">
-                        <div class="carousel-background"><img src="/img/intro/branding/1.png" alt=""></div>
-                    </div>
-
-                    <!-- Slide 2 -->
-                    <div class="item">
-                        <div class="carousel-background"><img src="/img/intro/branding/2.png" alt=""></div>
-                    </div>
-
-                    <!-- Slide 3 -->
-                    <div class="item">
-                        <div class="carousel-background"><img src="/img/intro/branding/3.png" alt=""></div>
-                    </div>
-
-                    <!-- Slide 4 -->
-                    <div class="item">
-                        <div class="carousel-background"><img src="/img/intro/branding/2.png" alt=""></div>
+                        <div class="carousel-background"><img src="/img/intro/branding/branding_intro.png" alt=""></div>
+                        <div class="carousel-container">
+                            <div class="carousel-content">
+                                <h2 class="animated fadeInDown">CRIAÇÃO DE MARCA</h2>
+                                <p class="animated fadeInUp">seja lembrado</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -100,7 +91,7 @@
             <div class="row">
                 <div class="col-md-offset-2 col-md-8">
                     <div class="section-heading">
-                        <h2>CRIAÇÃO DE MARCA</h2>
+                        <h2>IDENTIDADE DE MARCA</h2>
                         <div class="heading-line"></div>
                         <p>Sua empresa começou assim, na cara e na coragem? Vamos oficializar as coisas!</p>
                     </div>
