Working on new pages

--- a/pages/branding.html
+++ b/pages/branding.html
@@ -9,26 +9,26 @@
     <!-- css -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,300,700,800" rel="stylesheet" media="screen">
 
-    <link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="../css/style.css" rel="stylesheet" media="screen">
-    <link href="../color/default.css" rel="stylesheet" media="screen">
+    <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/css/style.css" rel="stylesheet" media="screen">
+    <link href="/color/default.css" rel="stylesheet" media="screen">
 
 </head>
 
 <body>
     <!-- js -->
-    <script src="../js/jquery.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/wow.min.js"></script>
-    <script src="../js/jquery.scrollTo.min.js"></script>
-    <script src="../js/jquery.nav.js"></script>
-    <script src="../js/modernizr.custom.js"></script>
-    <script src="../js/grid.js"></script>
-    <script src="../js/stellar.js"></script>
+    <script src="/js/jquery.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/wow.min.js"></script>
+    <script src="/js/jquery.scrollTo.min.js"></script>
+    <script src="/js/jquery.nav.js"></script>
+    <script src="/js/modernizr.custom.js"></script>
+    <script src="/js/grid.js"></script>
+    <script src="/js/stellar.js"></script>
     <!-- Contact Form JavaScript File -->
-    <script src="../contactform/contactform.js"></script>
+    <script src="/contactform/contactform.js"></script>
     <!-- Template Custom Javascript File -->
-    <script src="../js/custom.js"></script>
+    <script src="/js/custom.js"></script>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
