--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                     <h2>AS TECNOLOGIAS</h2>
                     <div class="heading-line"></div>
                     <p>As tecnologias que apoiam nosso trabalho e vão servir de base para a sua empresa também. <br>Líderes mundiais de tecnologia de ponta servindo à pequenas empresas como a sua, porque você e seu negócio não merecem menos que a perfeição.</p>
-                    <div class="col-xs-3">
+                    <div class="col-xs-1 col-sm-4">
                         <ul class="technologies">
                             <li class="wow fadeInDown" data-wow-delay="1.0s">
                                 <a href="#"><img src="img/techs/aruba.png" alt="" class="img-responsive"></a>
@@ -410,7 +410,7 @@
                                 <a href="#"><img src="img/techs/lenovo.png" alt="" class="img-responsive"></a>
                             </li>
                     </div>
-                    <div class="col-xs-3">
+                    <div class="col-xs-1 col-sm-4">
                         <ul class="technologies">
                             <li class="wow fadeInDown" data-wow-delay="2.0s">
                                 <a href="#"><img src="img/techs/dell.png" alt="" class="img-responsive" style="max-height:100%"></a>
@@ -425,7 +425,7 @@
                                 <a href="#"><img src="img/techs/linux.png" alt="" class="img-responsive" style="max-height:100%"></a>
                             </li>
                     </div>
-                    <div class="col-xs-3">
+                    <div class="col-xs-1 col-sm-4">
                         <ul class="technologies">
                             <li class="wow fadeInDown" data-wow-delay="3.0s">
                                 <a href="#"><img src="img/techs/microsoft.png" alt="" class="img-responsive" style="max-height:100%"></a>
