Working on new pages

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!-- <link rel="stylesheet" href="css/bootstrap3.min.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-nasa21.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/cubeportfolio.min.css">
@@ -149,9 +150,9 @@
                     </div>
                     <div class="col-sm features-section-2-col-2 ">
                         <div class="features-section-2-col-2__content">
-                            <h2>We strive to be the best and make Awesome Work.</h2>
+                            <h2>A gente cuida da sua estrutura como se fosse a nossa</h2>
                             <p>
-                                Lorem Ipsum is simply dummy text of the printing and type setting industry when an unknown printer took a galley of type and scrambled it to make a type specimen book It has survived not only five centuries.
+                                Para você poder guiar o crescimento do seu negócio sem se preocupar se a impressora parou ou se a internet está fora do ar. Deixa isso com a gente!
                             </p>
                         </div>
                     </div>
@@ -162,7 +163,6 @@
 
     <!--================== Services section =====================-->
     <div id="services">
-
         <div class="container features">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-12 bottom-space">
