New template madafaka

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 você poder cuidar do que realmente importa: fazer seu negócio crescer.
             </p>
         </div>
-        <div class="container">
+        <!--        <div class="container">
             <div class="row">
                 <div class="col-sm bottom-space">
                     <div class="feature-box">
@@ -128,7 +128,7 @@
                 </div>
 
             </div>
-        </div>
+        </div>-->
         <div class="features-section-2">
             <div class="container-fluid">
                 <div class="row">
@@ -155,9 +155,9 @@
                     <div class="folded-corner service_tab_1">
                         <div class="text">
                             <i class="fa fa-image fa-5x fa-icon-image"></i>
-                            <h3 class="item-title"> Designing</h3>
+                            <h3 class="item-title"> Criação de Marca</h3>
                             <p>
-                                This is an amazing set of animated accordions based completely on CSS. They come oriented both vertically and horizontally in order to fit properly in your project. In order to see the slides,
+                                Você tem uma ideia, nós damos vida. Sua marca conta a sua história e ela merece ser contada em todos os detalhes. <br>Vamos criar juntos!
                             </p>
                         </div>
                     </div>
@@ -166,9 +166,9 @@
                     <div class="folded-corner service_tab_1">
                         <div class="text">
                             <i class="fa fa-lightbulb-o fa-5x fa-icon-image"></i>
-                            <h3 class="item-title"> Developing</h3>
+                            <h3 class="item-title"> Desenvolvimento Web</h3>
                             <p>
-                                This is an amazing set of animated accordions based completely on CSS. They come oriented both vertically and horizontally in order to fit properly in your project. In order to see the slides,
+                                Se a sua empresa não existe na internet, ela não existe para a maior parte dos consumidores. <br>Sua empresa ainda não tem um site?
                             </p>
                         </div>
                     </div>
@@ -177,9 +177,9 @@
                     <div class="folded-corner service_tab_1">
                         <div class="text">
                             <i class="fa fa-truck fa-5x fa-icon-image"></i>
-                            <h3 class="item-title"> Marketing</h3>
+                            <h3 class="item-title"> Suporte Técnico</h3>
                             <p>
-                                This is an amazing set of animated accordions based completely on CSS. They come oriented both vertically and horizontally in order to fit properly in your project. In order to see the slides,
+                                O computador e a internet são ferramentas essenciais no mundo atual para uma empresa lucrar. <br>Deixa a gente cuidar disso para você!
                             </p>
                         </div>
                     </div>
@@ -188,9 +188,9 @@
                     <div class="folded-corner service_tab_1">
                         <div class="text">
                             <i class="fa fa-diamond fa-5x fa-icon-image"></i>
-                            <h3 class="item-title"> Branding</h3>
+                            <h3 class="item-title"> Gestão de TI</h3>
                             <p>
-                                This is an amazing set of animated accordions based completely on CSS. They come oriented both vertically and horizontally in order to fit properly in your project. In order to see the slides,
+                                Se a sua empresa já cresceu um pouco, você precisa de uma estrutura que dê suporte para aumentar ainda mais. <br>Conte conosco!
                             </p>
                         </div>
                     </div>
