New template madafaka

--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@
 
         <div class="grid-wrap">
             <div class="grid">
-                <figure class="hover-effect"><img src="/img/technologies/bitdefender.png" alt="Bitdefender" /></figure>
-                <figure class="hover-effect"><img src="/img/technologies/bootstrap.png" alt="Bootstrap" /></figure>
-                <figure class="hover-effect"><img src="/img/technologies/citrix.png" alt="Citrix" /></figure>
-                <figure class="hover-effect"><img src="/img/technologies/github.png" alt="Github" /></figure>
-                <figure class="hover-effect"><img src="/img/technologies/heroku.png" alt="Heroku" /></figure>
-                <figure class="hover-effect"><img src="/img/technologies/linux.png" alt="Linux" /></figure>
-                <figure class="hover-effect"><img src="/img/technologies/microsoft.png" alt="Microsoft" /></figure>
+                <figure class="hover-effect"><img src="img/technologies/bitdefender.png" alt="Bitdefender" /></figure>
+                <figure class="hover-effect"><img src="img/technologies/bootstrap.png" alt="Bootstrap" /></figure>
+                <figure class="hover-effect"><img src="img/technologies/citrix.png" alt="Citrix" /></figure>
+                <figure class="hover-effect"><img src="img/technologies/github.png" alt="Github" /></figure>
+                <figure class="hover-effect"><img src="img/technologies/heroku.png" alt="Heroku" /></figure>
+                <figure class="hover-effect"><img src="img/technologies/linux.png" alt="Linux" /></figure>
+                <figure class="hover-effect"><img src="img/technologies/microsoft.png" alt="Microsoft" /></figure>
             </div>
         </div>
         <!-- /grid-wrap -->
@@ -230,7 +230,7 @@
                     <h3>Bitdefender</h3>
 
                     <p>LÍDER MUNDIAL de proteção à vírus</p>
-                    <img class="" style="width:100%" src="/img/technologies/bitdefender.png" alt="Bitdefender" />
+                    <img class="" style="width:100%" src="img/technologies/bitdefender.png" alt="Bitdefender" />
 
                     <p>The only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones who never yawn or say a commonplace thing, but burn, burn, burn like fabulous yellow
                         roman candles exploding like spiders across the stars.</p>
