New template madafaka

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="folded-corner service_tab_1">
                         <div class="text">
                             <i class="fa fa-image fa-5x fa-icon-image"></i>
-                            <h3 class="item-title"> Criação de Marca</h3>
+                            <h3 class="item-title">Criação de Marca</h3>
                             <p>
                                 Você tem uma ideia, nós damos vida. Sua marca conta a sua história e ela merece ser contada em todos os detalhes. <br>Vamos criar juntos!
                             </p>
@@ -166,7 +166,7 @@
                     <div class="folded-corner service_tab_1">
                         <div class="text">
                             <i class="fa fa-lightbulb-o fa-5x fa-icon-image"></i>
-                            <h3 class="item-title"> Desenvolvimento Web</h3>
+                            <h3 class="item-title">Desenvolvimento Web</h3>
                             <p>
                                 Se a sua empresa não existe na internet, ela não existe para a maior parte dos consumidores. <br>Sua empresa ainda não tem um site?
                             </p>
@@ -177,7 +177,7 @@
                     <div class="folded-corner service_tab_1">
                         <div class="text">
                             <i class="fa fa-truck fa-5x fa-icon-image"></i>
-                            <h3 class="item-title"> Suporte Técnico</h3>
+                            <h3 class="item-title">Suporte Técnico</h3>
                             <p>
                                 O computador e a internet são ferramentas essenciais no mundo atual para uma empresa lucrar. <br>Deixa a gente cuidar disso para você!
                             </p>
@@ -188,7 +188,7 @@
                     <div class="folded-corner service_tab_1">
                         <div class="text">
                             <i class="fa fa-diamond fa-5x fa-icon-image"></i>
-                            <h3 class="item-title"> Gestão de TI</h3>
+                            <h3 class="item-title">Gestão de TI</h3>
                             <p>
                                 Se a sua empresa já cresceu um pouco, você precisa de uma estrutura que dê suporte para aumentar ainda mais. <br>Conte conosco!
                             </p>
@@ -229,7 +229,8 @@
                 <div class="text-center col-md-8 offset-md-2 col-sm-12 text-center">
                     <h3>Bitdefender</h3>
 
-                    <p>LÍDER MUNDIAL de proteção à vírus</p>
+                    <p>LÍDER MUNDIAL de proteção à vírus
+                    </p>
                     <img class="" style="width:100%" src="img/technologies/bitdefender.png" alt="Bitdefender" />
 
                     <p>The only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones who never yawn or say a commonplace thing, but burn, burn, burn like fabulous yellow
@@ -245,7 +246,7 @@
 
                     <p>Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin.
                     </p>
-                    <img class="" style="width:100%" src="img/portfolio/img-2.jpg" alt="img01" />
+                    <img class="" style="width:100%" src="img/technologies/bootstrap.png" alt="Bootstrap" />
 
                     <p>The only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones who never yawn or say a commonplace thing, but burn, burn, burn like fabulous yellow
                         roman candles exploding like spiders across the stars.</p>
