New template madafaka

--- a/index.html
+++ b/index.html
@@ -200,38 +200,39 @@
     </div>
 
     <!--================== Portfolio section =====================-->
-    <section class="grid3d vertical portfolio" id="technologies">
+    <section class="grid3d vertical portfolio" id="portfolio">
         <div class="container">
             <div class="teams-heading text-center col-md-8 offset-md-2 col-sm-12 text-center">
                 <!-- <span>Heros Behind The Company</span> -->
-                <h3 class="teams-heading">AS TECNOLOGIAS</h3>
+                <h3 class="teams-heading">Our Recent Project</h3>
 
-                <p class="heading_space">
-                    Estas são as tecnologias que tornam possível o seu sonho de empreender e fazem do nosso dia à dia mais simples!
+                <p class="heading_space">Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin. Quisque vitae sodales lectus. Nam porttitor justo sed mi finibus, vel tristique risus faucibus.
                 </p>
             </div>
         </div>
 
         <div class="grid-wrap">
             <div class="grid">
-                <figure class="hover-effect"><img src="img/technologies/bitdefender.jpg" alt="Bitdefender" /></figure>
-                <figure class="hover-effect"><img src="img/technologies/bootstrap.png" alt="Bootstrap" /></figure>
-                <figure class="hover-effect"><img src="img/technologies/citrix.png" alt="Citrix" /></figure>
-                <figure class="hover-effect"><img src="img/technologies/github.png" alt="Github" /></figure>
-                <figure class="hover-effect"><img src="img/technologies/heroku.png" alt="Heroku" /></figure>
-                <figure class="hover-effect"><img src="img/technologies/linux.png" alt="Linux" /></figure>
-                <figure class="hover-effect"><img src="img/technologies/microsoft.png" alt="Microsoft" /></figure>
+                <figure class="hover-effect"><img src="img/portfolio/img-1.jpg" alt="img01" /></figure>
+                <figure class="hover-effect"><img src="img/portfolio/img-2.jpg" alt="img05" /></figure>
+                <figure class="hover-effect"><img src="img/portfolio/img-3.jpg" alt="img08" /></figure>
+                <figure class="hover-effect"><img src="img/portfolio/img-4.jpg" alt="img02" /></figure>
+                <figure class="hover-effect"><img src="img/portfolio/img-5.jpg" alt="img04" /></figure>
+                <figure class="hover-effect"><img src="img/portfolio/img-6.jpg" alt="img03" /></figure>
+                <figure class="hover-effect"><img src="img/portfolio/img-7.jpg" alt="img09" /></figure>
+                <figure class="hover-effect"><img src="img/portfolio/img-8.jpg" alt="img06" /></figure>
+                <figure class="hover-effect"><img src="img/portfolio/img-4.jpg" alt="img07" /></figure>
             </div>
         </div>
         <!-- /grid-wrap -->
         <div class="content gallery-content">
             <div>
                 <div class="text-center col-md-8 offset-md-2 col-sm-12 text-center">
-                    <h3>Bitdefender</h3>
+                    <h3>Our Recent Project</h3>
 
-                    <p>LÍDER MUNDIAL de proteção à vírus
+                    <p>Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin.
                     </p>
-                    <img class="" style="width:100%" src="img/technologies/bitdefender.jpg" alt="Bitdefender" />
+                    <img class="" style="width:100%" src="img/portfolio/img-1.jpg" alt="img01" />
 
                     <p>The only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones who never yawn or say a commonplace thing, but burn, burn, burn like fabulous yellow
                         roman candles exploding like spiders across the stars.</p>
@@ -246,7 +247,7 @@
 
                     <p>Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin.
                     </p>
-                    <img class="" style="width:100%" src="img/technologies/bootstrap.png" alt="Bootstrap" />
+                    <img class="" style="width:100%" src="img/portfolio/img-2.jpg" alt="img01" />
 
                     <p>The only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones who never yawn or say a commonplace thing, but burn, burn, burn like fabulous yellow
                         roman candles exploding like spiders across the stars.</p>
