New template madafaka

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
         <div class="grid-wrap">
             <div class="grid">
-                <figure class="hover-effect"><img src="img/portfolio/img-1.jpg" alt="img01" /></figure>
+                <figure class="hover-effect"><img src="img/technologies/bitdefender.jpg" alt="Bitdefender" /></figure>
                 <figure class="hover-effect"><img src="img/portfolio/img-2.jpg" alt="img05" /></figure>
                 <figure class="hover-effect"><img src="img/portfolio/img-3.jpg" alt="img08" /></figure>
                 <figure class="hover-effect"><img src="img/portfolio/img-4.jpg" alt="img02" /></figure>
