New template madafaka

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
                     <p>Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin.
                     </p>
-                    <img class="" style="width:100%" src="img/portfolio/img-1.jpg" alt="img01" />
+                    <img class="" style="width:100%" src="img/technologies/bitdefender.jpg" alt="img01" />
 
                     <p>The only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones who never yawn or say a commonplace thing, but burn, burn, burn like fabulous yellow
                         roman candles exploding like spiders across the stars.</p>
