--- a/index.html
+++ b/index.html
@@ -204,17 +204,18 @@
         <div class="container">
             <div class="teams-heading text-center col-md-8 offset-md-2 col-sm-12 text-center">
                 <!-- <span>Heros Behind The Company</span> -->
-                <h3 class="teams-heading">Our Recent Project</h3>
+                <h3 class="teams-heading">AS TECNOLOGIAS</h3>
 
-                <p class="heading_space">Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin. Quisque vitae sodales lectus. Nam porttitor justo sed mi finibus, vel tristique risus faucibus.
+                <p class="heading_space">
+                    As tecnologias que ajudam o sonho de empreender a se tornar realidade!
                 </p>
             </div>
         </div>
 
         <div class="grid-wrap">
             <div class="grid">
-                <figure class="hover-effect"><img src="img/technologies/bitdefender.jpg" alt="Bitdefender" /></figure>
-                <figure class="hover-effect"><img src="img/portfolio/img-2.jpg" alt="img05" /></figure>
+                <figure class="hover-effect"><img src="/img/technologies/bitdefender.jpg" alt="Bitdefender" /></figure>
+                <figure class="hover-effect"><img src="/img/technologies/github.jpg" alt="GitHub" /></figure>
                 <figure class="hover-effect"><img src="img/portfolio/img-3.jpg" alt="img08" /></figure>
                 <figure class="hover-effect"><img src="img/portfolio/img-4.jpg" alt="img02" /></figure>
                 <figure class="hover-effect"><img src="img/portfolio/img-5.jpg" alt="img04" /></figure>
@@ -228,26 +229,27 @@
         <div class="content gallery-content">
             <div>
                 <div class="text-center col-md-8 offset-md-2 col-sm-12 text-center">
-                    <h3>Our Recent Project</h3>
+                    <h3>Bitdefender</h3>
 
-                    <p>Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin.
+                    <p>
+                        O líder mundial de proteção contra ameaças virtuais
                     </p>
-                    <img class="" style="width:100%" src="img/technologies/bitdefender.jpg" alt="img01" />
+                    <img class="" style="width:100%" src="img/technologies/bitdefender.jpg" alt="Bitdefender" />
 
-                    <p>The only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones who never yawn or say a commonplace thing, but burn, burn, burn like fabulous yellow
-                        roman candles exploding like spiders across the stars.</p>
-                    <p>The only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones who never yawn or say a commonplace thing, but burn, burn, burn like fabulous yellow
-                        roman candles exploding like spiders across the stars.</p>
+                    <p>
+                        Com proteção para Windows, Linux, Android e mais, a Bitdefender é uma das ferramentas mais seguras do mundo.
+                    </p>
+                    <p>Tanto a versão gratuita quanto a versão paga são ambas amplamente premiadas mundialmente com a melhor taxa de detecção de vírus, menor taxa de falsos-positivos, além de proteção avançada contra as ameaças mais atuais como ransomwares!</p>
                 </div>
 
             </div>
             <div>
                 <div class="text-center col-md-8 offset-md-2 col-sm-12 text-center">
-                    <h3>Our Recent Project</h3>
+                    <h3>GitHub</h3>
 
                     <p>Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin.
                     </p>
-                    <img class="" style="width:100%" src="img/portfolio/img-2.jpg" alt="img01" />
+                    <img class="" style="width:100%" src="/img/technologies/github.jpg" alt="GitHub" />
 
                     <p>The only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones who never yawn or say a commonplace thing, but burn, burn, burn like fabulous yellow
                         roman candles exploding like spiders across the stars.</p>
