New template madafaka

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="grid">
                 <figure class="hover-effect"><img src="/img/technologies/bitdefender.jpg" alt="Bitdefender" /></figure>
                 <figure class="hover-effect"><img src="/img/technologies/github.jpg" alt="GitHub" /></figure>
-                <figure class="hover-effect"><img src="img/portfolio/img-3.jpg" alt="img08" /></figure>
+                <figure class="hover-effect"><img src="/img/technologies/bootstrap.jpg" alt="Bootstrap" /></figure>
                 <figure class="hover-effect"><img src="img/portfolio/img-4.jpg" alt="img02" /></figure>
                 <figure class="hover-effect"><img src="img/portfolio/img-5.jpg" alt="img04" /></figure>
                 <figure class="hover-effect"><img src="img/portfolio/img-6.jpg" alt="img03" /></figure>
@@ -247,28 +247,32 @@
                 <div class="text-center col-md-8 offset-md-2 col-sm-12 text-center">
                     <h3>GitHub</h3>
 
-                    <p>Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin.
-                    </p>
+                    <p>A referência no mundo da programação</p>
                     <img class="" style="width:100%" src="/img/technologies/github.jpg" alt="GitHub" />
 
-                    <p>The only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones who never yawn or say a commonplace thing, but burn, burn, burn like fabulous yellow
-                        roman candles exploding like spiders across the stars.</p>
-                    <p>The only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones who never yawn or say a commonplace thing, but burn, burn, burn like fabulous yellow
-                        roman candles exploding like spiders across the stars.</p>
+                    <p>
+                        GitHub é um repositório online de códigos fonte, onde programadores do mundo podem trocar conhecimento e se auxiliar a crescer.
+                    </p>
+                    <p>
+                        Uma das funções incríveis do GitHub é fornecer uma forma de hospedagem de sites 100% gratuita, com alta disponibilidade. Perfeito para você.
+                    </p>
                 </div>
             </div>
             <div>
                 <div class="text-center col-md-8 offset-md-2 col-sm-12 text-center">
-                    <h3>Our Recent Project</h3>
+                    <h3>Bootstrap</h3>
 
-                    <p>Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin.
+                    <p>
+                        Um dos mais modernos frameworks HTML do mercado
                     </p>
-                    <img class="" style="width:100%" src="img/portfolio/img-3.jpg" alt="img01" />
+                    <img class="" style="width:100%" src="/img/technologies/bootstrap.jpg" alt="Bootstrap" />
 
-                    <p>The only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones who never yawn or say a commonplace thing, but burn, burn, burn like fabulous yellow
-                        roman candles exploding like spiders across the stars.</p>
-                    <p>The only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones who never yawn or say a commonplace thing, but burn, burn, burn like fabulous yellow
-                        roman candles exploding like spiders across the stars.</p>
+                    <p>
+                        Um framework é uma "tela" de programação que facilita a criação de novos sites agilizando o processo de desenvolvimento. O Bootstrap é um dos mais famosos e atuais frameworks, utilizado por gigantes como a Nintendo, a Vogue e até mesmo a Globo.com!
+                    </p>
+                    <p>
+                        Nós utilizamos este e outros frameworks para agilizar a criação de sites, colocando você mais perto do seu cliente o mais cedo o possível! Tudo isso ainda preparando seu site para ficar perfeito tanto no PC quanto no celular.
+                    </p>
                 </div>
             </div>
             <div>
