--- a/index.html
+++ b/index.html
@@ -218,11 +218,6 @@
                 <figure class="hover-effect"><img src="/img/technologies/github.jpg" alt="GitHub" /></figure>
                 <figure class="hover-effect"><img src="/img/technologies/bootstrap.jpg" alt="Bootstrap" /></figure>
                 <figure class="hover-effect"><img src="/img/technologies/heroku.png" alt="Heroku" /></figure>
-                <figure class="hover-effect"><img src="/img/technologies/" alt="img04" /></figure>
-                <figure class="hover-effect"><img src="/img/technologies/" alt="img03" /></figure>
-                <figure class="hover-effect"><img src="/img/technologies/" alt="img09" /></figure>
-                <figure class="hover-effect"><img src="/img/technologies/" alt="img06" /></figure>
-                <figure class="hover-effect"><img src="/img/technologies/" alt="img07" /></figure>
             </div>
         </div>
         <!-- /grid-wrap -->
@@ -291,11 +286,11 @@
             </div>
         </div>
 
-        <!--================== Team section =====================-->
+        <!--================== Team section =====================
         <div id="teams">
             <div class="container">
                 <div class="teams-heading text-center col-md-8 offset-md-2 col-sm-12 text-center">
-                    <!-- <span>Heros Behind The Company</span> -->
+                    <span>Heros Behind The Company</span>
                     <h1 class="teams-heading">Creative Team</h1>
 
                     <p class="heading_space">Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin. Quisque vitae sodales lectus. Nam porttitor justo sed mi finibus, vel tristique risus
@@ -360,7 +355,7 @@
             </div>
         </div>
 
-        <!--================== Feedback section =====================-->
+         Feedback section =====================
         <div id="testimonials" class="testimonials">
             <div class="cd-testimonials-wrapper cd-container">
                 <ul class="cd-testimonials">
@@ -398,11 +393,11 @@
                     </li>
 
                 </ul>
-                <!-- cd-testimonials -->
+                 cd-testimonials --
 
                 <a href="#0" class="cd-see-all">See all</a>
             </div>
-            <!-- cd-testimonials-wrapper -->
+             cd-testimonials-wrapper --
 
             <div class="cd-testimonials-all">
                 <div class="cd-testimonials-all-wrapper">
@@ -417,7 +412,7 @@
                                     <li>CEO, CompanyName</li>
                                 </ul>
                             </div>
-                            <!-- cd-author -->
+                             cd-author --
                         </li>
 
                         <li class="cd-testimonials-item">
@@ -433,7 +428,7 @@
                                     <li>CEO, CompanyName</li>
                                 </ul>
                             </div>
-                            <!-- cd-author -->
+                             cd-author --
                         </li>
 
                         <li class="cd-testimonials-item">
@@ -447,7 +442,7 @@
                                     <li>CEO, CompanyName</li>
                                 </ul>
                             </div>
-                            <!-- cd-author -->
+                             cd-author --
                         </li>
 
                         <li class="cd-testimonials-item">
@@ -462,7 +457,7 @@
                                     <li>CEO, CompanyName</li>
                                 </ul>
                             </div>
-                            <!-- cd-author -->
+                             cd-author --
                         </li>
 
                         <li class="cd-testimonials-item">
@@ -475,7 +470,7 @@
                                     <li>CEO, CompanyName</li>
                                 </ul>
                             </div>
-                            <!-- cd-author -->
+                             cd-author --
                         </li>
 
                         <li class="cd-testimonials-item">
@@ -488,7 +483,7 @@
                                     <li>CEO, CompanyName</li>
                                 </ul>
                             </div>
-                            <!-- cd-author -->
+                             cd-author --
                         </li>
 
                         <li class="cd-testimonials-item">
@@ -501,7 +496,7 @@
                                     <li>CEO, CompanyName</li>
                                 </ul>
                             </div>
-                            <!-- cd-author -->
+                             cd-author --
                         </li>
 
                         <li class="cd-testimonials-item">
@@ -514,7 +509,7 @@
                                     <li>CEO, CompanyName</li>
                                 </ul>
                             </div>
-                            <!-- cd-author -->
+                             cd-author --
                         </li>
 
                         <li class="cd-testimonials-item">
@@ -528,7 +523,7 @@
                                     <li>CEO, CompanyName</li>
                                 </ul>
                             </div>
-                            <!-- cd-author -->
+                             cd-author --
                         </li>
 
                         <li class="cd-testimonials-item">
@@ -542,7 +537,7 @@
                                     <li>CEO, CompanyName</li>
                                 </ul>
                             </div>
-                            <!-- cd-author -->
+                             cd-author --
                         </li>
 
                         <li class="cd-testimonials-item">
@@ -555,7 +550,7 @@
                                     <li>CEO, CompanyName</li>
                                 </ul>
                             </div>
-                            <!-- cd-author -->
+                             cd-author --
                         </li>
 
                         <li class="cd-testimonials-item">
@@ -570,16 +565,16 @@
                                     <li>CEO, CompanyName</li>
                                 </ul>
                             </div>
-                            <!-- cd-author -->
+                             cd-author 
                         </li>
                     </ul>
                 </div>
-                <!-- cd-testimonials-all-wrapper -->
+                 cd-testimonials-all-wrapper 
 
                 <a href="#0" class="close-btn">Close</a>
             </div>
-            <!-- cd-testimonials-all -->
-        </div>
+             cd-testimonials-all 
+        </div>-->
 
 
         <!--================== Blog section =====================-->
@@ -643,93 +638,93 @@
 
         <!--================== Contact section =====================-->
 
-        <div id="contact" class="contact">
+        <!--<div id="contact" class="contact">
             <div class="map">
                 <iframe height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=3%20Marina%20road%20Lagos%20Island%20Lagos&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
-                        <h1 class="contact-heading">Lets Get In Touch</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum illum ratione atque praesentium laudantium quaerat laborum consecteturLorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>-->
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
+                    <h1 class="contact-heading">Lets Get In Touch</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum illum ratione atque praesentium laudantium quaerat laborum consecteturLorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
-                        <div class="row margin-15px-bottom">
-                            <div class="col-sm-1 no-padding">
-                                <div class="contact-icon text-blue">
-                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                </div>
-                            </div>
-                            <div class="col-sm-11">
-                                <p class="text-small">San Francisco, CA 560 Bush St &amp; 20th Ave,<br> Apt 5 San Francisco, 230909</p>
+                    <div class="row margin-15px-bottom">
+                        <div class="col-sm-1 no-padding">
+                            <div class="contact-icon text-blue">
+                                <i class="fa fa-map-marker" aria-hidden="true"></i>
                             </div>
                         </div>
+                        <div class="col-sm-11">
+                            <p class="text-small">San Francisco, CA 560 Bush St &amp; 20th Ave,<br> Apt 5 San Francisco, 230909</p>
+                        </div>
+                    </div>
 
-                        <div class="row margin-15px-bottom">
-                            <div class="col-sm-1 no-padding">
-                                <div class="contact-icon text-blue">
-                                    <i class="fa fa-phone" aria-hidden="true"></i>
-                                </div>
-                            </div>
-                            <div class="col-sm-11">
-                                <p class="text-small">+01 2323 7328 322<br>+01 2323 7328 322</p>
+                    <div class="row margin-15px-bottom">
+                        <div class="col-sm-1 no-padding">
+                            <div class="contact-icon text-blue">
+                                <i class="fa fa-phone" aria-hidden="true"></i>
                             </div>
                         </div>
+                        <div class="col-sm-11">
+                            <p class="text-small">+01 2323 7328 322<br>+01 2323 7328 322</p>
+                        </div>
+                    </div>
 
-                        <div class="row margin-15px-bottom">
-                            <div class="col-sm-1 no-padding">
-                                <div class="contact-icon text-blue">
-                                    <i class="fa fa-globe" aria-hidden="true"></i>
-                                </div>
-                            </div>
-                            <div class="col-sm-11 xs-margin-50px-bottom">
-                                <p class="text-small">email@demo.com<br>www.demo.com</p>
+                    <div class="row margin-15px-bottom">
+                        <div class="col-sm-1 no-padding">
+                            <div class="contact-icon text-blue">
+                                <i class="fa fa-globe" aria-hidden="true"></i>
                             </div>
                         </div>
-
-
+                        <div class="col-sm-11 xs-margin-50px-bottom">
+                            <p class="text-small">email@demo.com<br>www.demo.com</p>
+                        </div>
                     </div>
 
 
-                    <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
-                        <!-- Starting of ajax contact form -->
-                        <form class="contact__form" method="post" action="contact_mail.php">
-                            <!-- Element of the ajax contact form -->
-                            <div class="row">
-                                <div class="col-md-6 form-group">
-                                    <input name="name" type="text" class="form-control" placeholder="Name" required>
-                                </div>
-                                <div class="col-md-6 form-group">
-                                    <input name="email" type="email" class="form-control" placeholder="Email" required>
-                                </div>
-                                <div class="col-md-6 form-group">
-                                    <input name="phone" type="text" class="form-control" placeholder="Phone" required>
-                                </div>
-                                <div class="col-md-6 form-group">
-                                    <input name="subject" type="text" class="form-control" placeholder="Subject" required>
-                                </div>
-                                <div class="col-12 form-group">
-                                    <textarea name="message" class="form-control" rows="3" placeholder="Message" required></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <input name="submit" type="submit" class="button-style" value="Send Message">
-                                </div>
-                            </div>
+                </div>
 
 
-                        </form>
-                        <!-- Ending of ajax contact form -->
-                        <!-- Starting of successful form message -->
+                <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
+                    <!-- Starting of ajax contact form -->
+                    <form class="contact__form" method="post" action="contact_mail.php">
+                        <!-- Element of the ajax contact form -->
                         <div class="row">
+                            <div class="col-md-6 form-group">
+                                <input name="name" type="text" class="form-control" placeholder="Name" required>
+                            </div>
+                            <div class="col-md-6 form-group">
+                                <input name="email" type="email" class="form-control" placeholder="Email" required>
+                            </div>
+                            <div class="col-md-6 form-group">
+                                <input name="phone" type="text" class="form-control" placeholder="Phone" required>
+                            </div>
+                            <div class="col-md-6 form-group">
+                                <input name="subject" type="text" class="form-control" placeholder="Subject" required>
+                            </div>
+                            <div class="col-12 form-group">
+                                <textarea name="message" class="form-control" rows="3" placeholder="Message" required></textarea>
+                            </div>
                             <div class="col-12">
-                                <div class="alert alert-success contact__msg" style="display: none" role="alert">
-                                    Your message was sent successfully.
-                                </div>
+                                <input name="submit" type="submit" class="button-style" value="Send Message">
                             </div>
                         </div>
-                        <!-- Ending of successful form message -->
+
+
+                    </form>
+                    <!-- Ending of ajax contact form -->
+                    <!-- Starting of successful form message -->
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="alert alert-success contact__msg" style="display: none" role="alert">
+                                Your message was sent successfully.
+                            </div>
+                        </div>
                     </div>
+                    <!-- Ending of successful form message -->
                 </div>
             </div>
+        </div>
         </div>
         <footer class="text-center pos-re">
             <div class="container">
