New template madafaka

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <figure class="hover-effect"><img src="/img/technologies/bitdefender.jpg" alt="Bitdefender" /></figure>
                 <figure class="hover-effect"><img src="/img/technologies/github.jpg" alt="GitHub" /></figure>
                 <figure class="hover-effect"><img src="/img/technologies/bootstrap.jpg" alt="Bootstrap" /></figure>
-                <figure class="hover-effect"><img src="/img/technologies/heroku.png" alt="Heroku" /></figure>
+                <figure class="hover-effect"><img src="/img/technologies/heroku.jpg" alt="Heroku" /></figure>
             </div>
         </div>
         <!-- /grid-wrap -->
